06_external-access/external-access-prometheus/dev/ingressroute-patch-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  routes:
    - match: Host(`prometheus.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: prometheus-louketo-proxy
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  routes:
    - match: Host(`prometheus.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: prometheus-louketo-proxy
          port: 3000
